Fix UI and request bugs in show active tickets, show preselected option instead of place-selector, add multiple text changes and fix some bugs

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -78,7 +78,7 @@
     "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?",
     "no-proof-found-message": "Es wurden keine 3G Informationen gefunden.",
     "valid-proof-found-message": "Es wurden gespeicherte 3G Informationen gefunden.",
-    "valid-proof-uploaded-message": "3G Informationen erfolgreich importiert.",
+    "valid-proof-uploaded-message": "3G Informationen gefunden und erfolgreich importiert.",
     "place-select-title": "Ort auswählen",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
@@ -86,6 +86,8 @@
     "no-proof-continue": "Ticket ohne 3G Nachweis erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
+    "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
+    "refresh-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "check-in-link-description": "Möchten Sie auch am Contact Tracing der TU Graz teilnehmen?",
@@ -93,7 +95,7 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und ich die Validierung meines Zertifikats nicht manipuliert habe.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
     "valid-cert-found-text": "Bestehenden 3G Nachweis verwenden",
     "store-valid-cert-text": "3G Nachweis für später speichern.",
