--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -79,7 +79,7 @@
     "confirm-text": "Do you really want to delete your 3G proof?",
     "no-proof-found-message": "No 3G information could be found.",
     "valid-proof-found-message": "Stored 3G information could be found.",
-    "valid-proof-uploaded-message": "3G information was successfully imported.",
+    "valid-proof-uploaded-message": "3G information found and successfully imported.",
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
@@ -87,6 +87,8 @@
     "no-proof-continue": "Acquire ticket without 3G proof",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
+    "refresh-ticket-success-title": "Ticket successfully refreshed!",
+    "refresh-ticket-success-body": "The acquired ticket for {{place}} was successfully refreshed.",
     "other-error-title": "Error!",
     "other-error-body": "An unknown error has occurred.",
     "check-in-link-description": "Do you want to use contact tracing at TU Graz?",
@@ -94,8 +96,8 @@
     "manage-tickets-link": "Show active tickets",
     "manage-tickets-text": "You can manage your active tickets at: ",
     "skip-button-text": "Skip",
-    "confirm-checkbox-valid-cert-text": "I confirm that my information is correct and that I have not manipulated the validation of my certificate.",
-    "confirm-checkbox-no-cert-text": "I confirm that the information I have provided is correct and that I am carrying a valid 3G certificate.",
+    "confirm-checkbox-valid-cert-text": "I confirm that my information is correct and that I may be liable to prosecution in the event of fraud.",
+    "confirm-checkbox-no-cert-text": "I confirm that the information I have provided is correct and that I may be liable to prosecution in the event of fraud.",
     "valid-cert-found-text": "Use existing 3g proof",
     "store-valid-cert-text": "Save 3G proof for later.",
     "3g-proof-label-text": "Use 3G Information",
