Fix UI flow for each possible case

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -60,8 +60,8 @@
     "title": "Ticket für Ort ausstellen",
     "description": "Mit dieser Applikation können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
     "additional-information": "Sie können einen QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "success-activation-title": "Erfolgreiche Aktivierung!",
-    "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich aktiviert.",
+    "success-activation-title": "Erfolgreich importiert!",
+    "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich importiert.",
     "invalid-qr-code-title": "Ungültiger QR Code!",
     "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
     "no-qr-code-title": "Kein QR Code gefunden!",
@@ -76,7 +76,7 @@
     "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "manual-uploading-message": "Suche nach validem QR Code...",
     "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?",
-    "no-proof-found-message": "Es wurden keine 3G Informationen gefunden.",
+    "no-proof-found-message": "Es wurden keine 3G Informationen importiert.",
     "valid-proof-found-message": "Es wurden gespeicherte 3G Informationen gefunden.",
     "valid-proof-uploaded-message": "3G Informationen gefunden und erfolgreich importiert.",
     "place-select-title": "Ort auswählen",
@@ -93,7 +93,7 @@
     "check-in-link-description": "Möchten Sie auch am Contact Tracing der TU Graz teilnehmen?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Aktive Tickets anzeigen",
-    "manage-tickets-text": "Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
+    "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
