--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -59,7 +59,7 @@
   "acquire-3g-ticket": {
     "title": "Ticket für Ort ausstellen",
     "description": "Mit dieser Applikation können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
-    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) uploaden indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) uploaden indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "success-activation-title": "Erfolgreich importiert!",
     "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich importiert.",
     "invalid-qr-code-title": "Ungültiger QR Code!",
