Add error messages to check

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -57,8 +57,6 @@
     "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
   },
   "acquire-3g-ticket": {
-    "title": "Ticket für Ort ausstellen",
-    "description": "Mit dieser Applikation können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) uploaden indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "success-activation-title": "Erfolgreich importiert!",
     "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich importiert.",
@@ -75,10 +73,9 @@
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
     "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "manual-uploading-message": "Suche nach validem QR Code...",
-    "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?",
-    "no-proof-found-message": "Es wurden keine 3G Informationen importiert.",
-    "valid-proof-found-message": "Es wurden lokal gespeicherte 3G Informationen gefunden.",
-    "valid-proof-uploaded-message": "Lokale 3G Informationen gefunden und erfolgreich importiert.",
+    "confirm-text": "Wollen Sie Ihren 3-G Nachweis wirklich löschen?",
+    "no-proof-found-message": "Es wurden keine 3-G Informationen importiert.",
+    "valid-proof-uploaded-message": "Lokale 3-G Informationen gefunden und erfolgreich importiert.",
     "place-select-title": "Ticket für",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
@@ -97,10 +94,26 @@
     "skip-button-text": "Überspringen",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
-    "valid-cert-found-text": "Bestehenden 3G Nachweis verwenden",
+    "valid-cert-found-text": "Bestehenden 3-G Nachweis verwenden",
     "store-valid-cert-text": "3G Nachweis für später speichern.",
     "3g-proof-label-text": "3G Nachweis überprüfen",
-    "valid-cert-found-alternative": "Nicht verwenden"
+    "valid-cert-found-alternative": "Nicht verwenden",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
+    "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
+    "found-valid-3g-title": "Gültige 3-G Nachweis gefunden",
+    "found-valid-3g-body": "Es wurde ein gültiger 3-G Nachweis erfolgreich importiert.",
+    "found-valid-selfetest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
+    "found-valid-selfetest": "Es wurden ein Selbsttest gefunden.",
+    "not-same-person": "Die Person im hochgeladenen Nachweis stimmt nicht mit der angmeldeten Person überein.",
+    "cannot-process-data": "Der hochgeladene Nachweis konnte nicht verarbeitet werden.",
+    "cannot-process-data-title": "Problem bei der Verarbeitung aufgetreten",
+    "cannot-process-data-body": "Der hochgeladene Nachweis konnte nicht verarbeitet werden. Bitte probieren Sie es noch einmal oder überspringen Sie den Upload Vorgang.",
+    "validate-error": "Ein Fehler ist aufgetreten.",
+    "validate-error-title": "Ein Fehler ist aufgetreten",
+    "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
+    "hcert-invalid": "Hochgeladener Nachweis ist ungültig.",
+    "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
+    "hcert-invalid-body": "Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang."
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
