--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,52 +1,52 @@
 {
   "green-pass-activation": {
-    "title": "3G Nachweis aktivieren",
-    "description": "Mit dieser Applikation können Sie ihren 3G Nachweis überprüfen und aktivieren.",
-    "additional-information": "Hier können Sie einen QR Code scannen oder ein vorhandenes PDF oder Bild hochladen, um Ihren 3G Nachweis für den Zeitraum seiner Gültigkeit zu aktivieren. Wenn Sie einen neuen Nachweis hochladen, wird ein bereits bestehender Nachweis durch diesen ersetzt. Bitte beachten Sie, dass Sie damit trotzdem noch ein Ticket für Räume erwerben müssen, um die 3G-Regeln einzuhalten.",
+    "title": "3-G Nachweis aktivieren",
+    "description": "Mit dieser Applikation können Sie ihren 3-G Nachweis überprüfen und aktivieren.",
+    "additional-information": "Hier können Sie einen QR Code scannen oder ein vorhandenes PDF oder Bild hochladen, um Ihren 3-G Nachweis für den Zeitraum seiner Gültigkeit zu aktivieren. Wenn Sie einen neuen Nachweis hochladen, wird ein bereits bestehender Nachweis durch diesen ersetzt. Bitte beachten Sie, dass Sie damit trotzdem noch ein Ticket für Räume erwerben müssen, um die 3G-Regeln einzuhalten.",
     "success-activation-title": "Erfolgreiche Aktivierung!",
-    "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich aktiviert.",
+    "success-activation-body": "Ihr 3-G Nachweis wurde erfolgreich aktiviert.",
     "invalid-qr-code-title": "Ungültiger QR Code!",
-    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3-G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "no-qr-code-title": "Kein QR Code gefunden!",
-    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "data-protection": "Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App \"TU Graz Greenlight\" finden sie hier:",
     "data-protection-link": "Zur Datenschutzerklärung",
     "qr-button-text": "QR Code scannen",
     "manually-button-text": "Datei hochladen",
-    "uploaded-success-message": "Ein 3G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
+    "uploaded-success-message": "Ein 3-G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
     "valid-until": "{{date}} um {{clock}} Uhr.",
     "delete-button-text": "Löschen",
     "refresh-button-text": "Ersetzen",
-    "inline-notification-text": "Ein gültiger 3G Nachweis wurde gefunden!",
-    "inline-notification-warning": "Ihr 3G Nachweis läuft in Kürze ab!",
+    "inline-notification-text": "Ein gültiger 3-G Nachweis wurde gefunden!",
+    "inline-notification-warning": "Ihr 3-G Nachweis läuft in Kürze ab!",
     "activate-button-title": "Aktivieren",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
     "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "delete-certificate-failed-title": "Fehler!",
-    "delete-certificate-failed-body": "Es ist ein Fehler beim Entfernen Ihres 3G Nachweises aufgetreten.",
+    "delete-certificate-failed-body": "Es ist ein Fehler beim Entfernen Ihres 3-G Nachweises aufgetreten.",
     "delete-certificate-not-found-title": "Fehler!",
     "delete-certificate-not-found-body": "Das Zertifikat wurde nicht gefunden.",
     "delete-certificate-success-title": "Löschen erfolgreich!",
-    "delete-certificate-success-body": "Ihr 3G Nachweis wurde erfolgreich aus dem System entfernt.",
+    "delete-certificate-success-body": "Ihr 3-G Nachweis wurde erfolgreich aus dem System entfernt.",
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "manual-uploading-message": "Suche nach validem QR Code...",
-    "confirm-text": "Wollen Sie Ihren 3G Nachweis wirklich löschen?"
+    "confirm-text": "Wollen Sie Ihren 3-G Nachweis wirklich löschen?"
   },
   "acquire-ticket": {
     "title": "Ticket für Ort ausstellen",
     "description": "Hier können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
-    "activation-link": "3G Nachweis aktivieren",
-    "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3G Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3G Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
-    "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "no-proof-found-message": "Es wurde kein gültiger 3G Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3G Nachweis unter dem Menüpunkt ",
-    "valid-proof-found-message": "Es wurde ein gültiger 3G Nachweis gefunden.",
+    "activation-link": "3-G Nachweis aktivieren",
+    "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3-G Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3-G Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
+    "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "no-proof-found-message": "Es wurde kein gültiger 3-G Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3-G Nachweis unter dem Menüpunkt ",
+    "valid-proof-found-message": "Es wurde ein gültiger 3-G Nachweis gefunden.",
     "place-select-title": "Ort auswählen",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
     "refresh-button-text": "Ticket verlängern",
-    "no-proof-continue": "Ticket ohne 3G Nachweis erstellen",
+    "no-proof-continue": "Ticket ohne 3-G Nachweis erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "other-error-title": "Fehler!",
@@ -59,11 +59,11 @@
   "acquire-3g-ticket": {
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) uploaden indem sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "success-activation-title": "Erfolgreich importiert!",
-    "success-activation-body": "Ihr 3G Nachweis wurde erfolgreich importiert.",
+    "success-activation-body": "Ihr 3-G Nachweis wurde erfolgreich importiert.",
     "invalid-qr-code-title": "Ungültiger QR Code!",
-    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3-G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "no-qr-code-title": "Kein QR Code gefunden!",
-    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3G Nachweises aus.",
+    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "data-protection": "Was macht die TU Graz mit Ihren Daten? Die Datenschutzerklärung zur App \"TU Graz Greenlight\" finden sie hier:",
     "data-protection-link": "Zur Datenschutzerklärung",
     "qr-button-text": "QR Code scannen",
@@ -80,7 +80,7 @@
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
     "refresh-button-text": "Ticket verlängern",
-    "no-proof-continue": "Ticket ohne 3G Nachweis erstellen",
+    "no-proof-continue": "Ticket ohne 3-G Nachweis erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
@@ -95,8 +95,8 @@
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
     "valid-cert-found-text": "Bestehenden 3-G Nachweis verwenden",
-    "store-valid-cert-text": "3G Nachweis für später speichern.",
-    "3g-proof-label-text": "3G Nachweis überprüfen",
+    "store-valid-cert-text": "3-G Nachweis für später speichern.",
+    "3g-proof-label-text": "3-G Nachweis überprüfen",
     "valid-cert-found-alternative": "Nicht verwenden",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
