--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,52 +1,52 @@
 {
   "green-pass-activation": {
-    "title": "Activate 3G Proof",
-    "description": "With this application you can activate your 3G proof.",
-    "additional-information": "Here you can scan a QR code or upload an existing PDF or image with a QR code to activate your 3G proof for the period of its validity. When you upload a new proof, any existing proof will be replaced. Please note that this will still require you to obtain a ticket for rooms in order to comply with 3G rules.",
+    "title": "Activate 3-G evidence",
+    "description": "With this application you can activate your 3-G evidence.",
+    "additional-information": "Here you can scan a QR code or upload an existing PDF or image with a QR code to activate your 3-G evidence for the period of its validity. When you upload a new evidence, any existing evidence will be replaced. Please note that this will still require you to obtain a ticket for rooms in order to comply with 3G rules.",
     "success-activation-title": "Successful Activation!",
-    "success-activation-body": "Your 3G proof has been successfully activated.",
+    "success-activation-body": "Your 3-G evidence has been successfully activated.",
     "invalid-qr-code-title": "Invalid QR Code!",
-    "invalid-qr-code-body": "This QR code is not a valid 3G proof. Please use another one or select the manual 3G inspection at the ticket store.",
+    "invalid-qr-code-body": "This QR code is not a valid 3-G evidence. Please use another one or select the manual 3-G inspection at the ticket store.",
     "no-qr-code-title": "No QR code found!",
-    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3G inspection at the ticket store.",
+    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
     "data-protection": "What does TU Graz do with your data? You can find the data protection declaration for the app \"TU Graz Greenlight\" here:",
     "data-protection-link": "Privacy statement",
     "qr-button-text": "Scan QR Code",
     "manually-button-text": "Upload File",
-    "uploaded-success-message": "A 3G proof has been successfully verified and is active until",
+    "uploaded-success-message": "A 3-G evidence has been successfully verified and is active until",
     "valid-until": "{{date}} at {{clock}}.",
     "delete-button-text": "Delete",
     "refresh-button-text": "Replace",
-    "inline-notification-text": "A valid 3G proof was found!",
-    "inline-notification-warning": "Your 3G proof will expire soon!",
+    "inline-notification-text": "A valid 3-G evidence was found!",
+    "inline-notification-warning": "Your 3-G evidence will expire soon!",
     "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
-    "filepicker-context": "Choose File for 3G Verification",
+    "filepicker-context": "Choose File for 3-G Verification",
     "filepicker-open-button-title": "Choose File for Verification",
     "delete-certificate-failed-title": "Error!",
-    "delete-certificate-failed-body": "An error occurred while removing your 3G proof.",
+    "delete-certificate-failed-body": "An error occurred while removing your 3-G evidence.",
     "delete-certificate-not-found-title": "Error!",
     "delete-certificate-not-found-body": "The certificate could not be found.",
     "delete-certificate-success-title": "Successful deleted!",
-    "delete-certificate-success-body": "Your 3G proof has been successfully removed.",
+    "delete-certificate-success-body": "Your 3-G evidence has been successfully removed.",
     "other-error-title": "Error!",
     "other-error-body": "An unknown error has occurred.",
     "manual-uploading-message": "Search for valid QR Code...",
-    "confirm-text": "Do you really want to delete your 3G proof?"
+    "confirm-text": "Do you really want to delete your 3-G evidence?"
   },
   "acquire-ticket": {
     "title": "Acquire ticket for a place",
     "description": "Here you can acquire a ticket for a location at TU Graz.",
-    "activation-link": "activate 3G proof",
-    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3G proof, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3G proof yet, please use the menu item ",
-    "additional-information-2": " to activate a proof. Alternatively, you can manually confirm that you are carrying 3G proof and be able to prove it in case of a manual control.",
-    "no-proof-found-message": "No valid 3G proof was found. Please activate a valid 3G detection under the menu item ",
-    "valid-proof-found-message": "A valid 3G proof was found. Please select a location to create a ticket.",
+    "activation-link": "activate 3-G evidence",
+    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3-G evidence, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3-G evidence yet, please use the menu item ",
+    "additional-information-2": " to activate a evidence. Alternatively, you can manually confirm that you are carrying 3-G evidence and be able to prove it in case of a manual control.",
+    "no-proof-found-message": "No valid 3-G evidence was found. Please activate a valid 3-G detection under the menu item ",
+    "valid-proof-found-message": "A valid 3-G evidence was found. Please select a location to create a ticket.",
     "place-select-title": "Select a place",
-    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
+    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
     "refresh-button-text": "Refresh Ticket",
-    "no-proof-continue": "Acquire ticket without 3G proof",
+    "no-proof-continue": "Acquire ticket without 3-G evidence",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "other-error-title": "Error!",
@@ -58,30 +58,30 @@
     "skip-button-text": "Skip"
   },
   "acquire-3g-ticket": {
-    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location at TU Graz for a certain period of time. This is needed to be allowed to enter a location at TU Graz. Alternatively, you can manually confirm that you are carrying 3G proof and be able to prove it in case of a manual control.",
+    "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location at TU Graz for a certain period of time. This is needed to be allowed to enter a location at TU Graz. Alternatively, you can manually confirm that you are carrying 3G evidence and be able to prove it in case of a manual control.",
     "success-activation-title": "Successful Activation!",
-    "success-activation-body": "Your 3G proof has been successfully activated.",
+    "success-activation-body": "Your 3-G evidence has been successfully activated.",
     "invalid-qr-code-title": "Invalid QR Code!",
-    "invalid-qr-code-body": "This QR code is not a valid 3G proof. Please use another one or select the manual 3G inspection at the ticket store.",
+    "invalid-qr-code-body": "This QR code is not a valid 3-G evidence. Please use another one or select the manual 3-G inspection at the ticket store.",
     "no-qr-code-title": "No QR code found!",
-    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3G inspection at the ticket store.",
+    "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
     "data-protection": "What does TU Graz do with your data? You can find the data protection declaration for the app \"TU Graz Greenlight\" here:",
     "data-protection-link": "Privacy statement",
     "qr-button-text": "Scan QR Code",
     "manually-button-text": "Upload File",
     "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
-    "filepicker-context": "Choose File for 3G Verification",
+    "filepicker-context": "Choose File for 3-G Verification",
     "filepicker-open-button-title": "Choose File for Verification",
     "manual-uploading-message": "Search for valid QR Code...",
-    "confirm-text": "Do you really want to delete your 3G proof?",
-    "no-proof-found-message": "No 3G information was imported.",
-    "valid-proof-uploaded-message": "3G information found and successfully imported.",
+    "confirm-text": "Do you really want to delete your 3-G evidence?",
+    "no-proof-found-message": "No 3-G information was imported.",
+    "valid-proof-uploaded-message": "3-G information found and successfully imported.",
     "place-select-title": "Select a place",
-    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid proof of such for the duration of my stay in this room and can present such proof in the event of a manual inspection.",
+    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
     "refresh-button-text": "Refresh Ticket",
-    "no-proof-continue": "Acquire ticket without 3G proof",
+    "no-proof-continue": "Acquire ticket without 3-G evidence",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "refresh-ticket-success-title": "Ticket successfully refreshed!",
@@ -95,23 +95,23 @@
     "skip-button-text": "Skip",
     "confirm-checkbox-valid-cert-text": "I confirm that my information is correct and that I may be liable to prosecution in the event of fraud.",
     "confirm-checkbox-no-cert-text": "I confirm that the information I have provided is correct and that I may be liable to prosecution in the event of fraud.",
-    "valid-cert-found-text": "Use existing 3g proof",
-    "store-valid-cert-text": "Save 3G proof for later.",
-    "3g-proof-label-text": "Use 3G Information",
+    "valid-cert-found-text": "Use existing 3-G evidence",
+    "store-valid-cert-text": "Save 3-G evidence for later.",
+    "3g-proof-label-text": "Use 3-G Information",
     "valid-cert-found-alternative": "Do not use it",
     "preselected-place": "TU Graz",
-    "found-valid-3g-preCheck": "Stored valid 3G information could be found.",
+    "found-valid-3g-preCheck": "Stored valid 3-G information could be found.",
     "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
     "found-valid-selfetest": "A self-test was found.",
     "not-same-person": "The person in the uploaded certificate does not match the person logged in.",
-    "cannot-process-data": "The uploaded proof could not be processed.",
+    "cannot-process-data": "The uploaded evidence could not be processed.",
     "cannot-process-data-title": "There was a problem processing",
-    "cannot-process-data-body": "The uploaded proof could not be processed. Please try again or skip the upload process.",
+    "cannot-process-data-body": "The uploaded evidence could not be processed. Please try again or skip the upload process.",
     "validate-error": "An error has occurred.",
     "validate-error-title": "An error has occurred",
     "validate-error-body": "Please try again or skip the process.",
-    "hcert-invalid": "Uploaded proof is invalid.",
-    "hcert-invalid-title": "Uploaded proof is invalid.",
+    "hcert-invalid": "Uploaded evidence is invalid.",
+    "hcert-invalid-title": "Uploaded evidence is invalid.",
     "hcert-invalid-body": "Please upload a valid 3-G certificate or skip the process."
   },
   "show-active-tickets": {
