--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -82,6 +82,7 @@
     "confirm-button-text": "Create a Ticket",
     "refresh-button-text": "Refresh Ticket",
     "no-proof-continue": "Acquire ticket without 3-G evidence",
+    "create-ticket": "Create ticket",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "refresh-ticket-success-title": "Ticket successfully refreshed!",
@@ -99,7 +100,6 @@
     "store-valid-cert-text": "Save 3-G evidence for later.",
     "3g-proof-label-text": "Use 3-G Information",
     "valid-cert-found-alternative": "Do not use it",
-    "preselected-place": "TU Graz",
     "found-valid-3g-preCheck": "Stored valid 3-G information could be found.",
     "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
     "found-valid-selfetest": "A self-test was found.",
